  to expand shortcuts in msgs. (Bernhard Reiter)
- Drop comment in user settings about numeric hour offsets instead of using
  pytz timezone names. Due to DST these are wrong half of the year, it is
  much better to use timezone names. (Thomas Arendsen Hein)
- issue2550793: Wrap messages with very long lines in the web interface.
  (Thomas Arendsen Hein)

Fixed:

- issue2550830 An empty LinkHTMLProperty cannot be compared successfully. 
  Improves the query editing page. Reported and fixed by R David Murray 
  (Bernhard Reiter).
- Fix Release-date of 1.5.0 in this file (thanks to Bernhard for
  discovery) (Ralf Schlatterbeck)
- Pythons cgi form code can return a TypeError, we now guard for this
  condition. (Ralf Schlatterbeck)
- Small bug-fix in SQL backends: A query (e.g. in a html menu) with a
  where-clause that always evaluates to false now will not raise a
  traceback. (Ralf Schlatterbeck)
- Remove Python 2.3 compatibility code for i18n (anatoly techtonik)
- If documentation 'sphinx-build' tool is not found in system PATH,
  'setup.py build_doc' command now tries to detect it from PYTHONPATH
  (anatoly techtonik)
- Read version and release for generated documentation from
  roundup/__init__.py. (Thomas Arendsen Hein)
- Do not throw an internal error if a .mo file can not be read
  (Thomas Arendsen Hein)
- issue2550673 Make the "Make a copy" link work by fixing copy_url to properly
  handle multilink properties. (John Rouillard)
- issue2550583, issue2550635 Do not limit results with Xapian indexer
  (Thomas Arendsen Hein)
- Allow using plain() on unsaved dates in HTML forms
  (Thomas Arendsen Hein)
- setup.py now installs static files of the HTML documentation (stylesheets,
  images, etc.) (Thomas Arendsen Hein)
- executable .py scripts need "#!/usr/bin/env python", add this to demo.py,
  remove exec bits from website/wiki/wiki/data/plugin/theme/roundup.py
  (Thomas Arendsen Hein)
- issue2550822: Fix showing more than one additional property in class menu